java9: Use wrapper valueOf method instead of new wrapper
Javac 9 warns against new wrapper calls.