@@ -13,7 +13,7 @@ public class FilteredProducerImpl implements Producer {
 	 * @return value out of range to indicate the wrong call
 	 */
 	public Object polled(Wire w) {
-		return new Integer(100);
+		return Integer.valueOf(100);
 	}
 
 	public void consumersConnected(Wire[] wires) {
@@ -23,14 +23,14 @@ public class FilteredProducerImpl implements Producer {
 
 	void updateWire(int delta) {
 		for (int i = 0; i < 10; i += delta) {
-			wire.update(new Integer(i));
+			wire.update(Integer.valueOf(i));
 		}
 	}
 
 	void updateWireDelayed(int delta, long delay) {
 		for (int i = 0; i < 10; i += delta) {
 			long processTime = System.currentTimeMillis();
-			wire.update(new Integer(i));
+			wire.update(Integer.valueOf(i));
 			processTime = System.currentTimeMillis() - processTime;
 			try {
 				Sleep.sleep(delay - processTime);
